# MOP-Code

./: .editorconfig  .gitattributes  .gitignore  .hintrc  CONTRIBUTING.md  Dashboard.tsx  FAQ Document.htm  Finetuned_Mistral_7B.ipynb  Health Behavior analysis and prediction.py  MERGED_DATA.ipynb  Microclimate_Visualization.twb  Missing_dates_creation.sql  Mistral_7B.ipynb  Onstreet_sensor_carpark_data.rar.REMOVED.git-id  Pedestrian_Visualization.twb  Project 3B_T126_Water pipeline failure prediction.ipynb  README.md  Readme.md  SIMPLE WAYS TO WRITE USE CASE, USER STORY, AND DEFINE VARIABLES.docx  SMART CONTRACT AND BLOCKCHAIN.docx dddd.docx  Tourism_Impact_Analysis.ipynb  TouristMobility_usecase.ipynb  UseCase.ipynb  VehiDE detector.py  Welcome_To_Colaboratory.ipynb  Welcome_to_Colaboratory.ipynb  about.css  analysis of Business Establishments by Industry Classification.ipynb  app.py  benchmark_threat_dataset.csv  check_versions.py  cleaned_data_with_splits.csv  cnn_lstm_sleep_model.ipynb  config.py  docker-compose.debug.yml  docker-compose.yml  env.txt  final_code.ipynb  gender_filtered_data.csv  initial_code.ipynb  (+17 more)
...archive/: README.md
.ARCHIVE/: .gitattributes  .gitignore  et --hard eaf8770f  req.txt
ETL/: Dockerfile  deploy.sh  function.py  function2.py  samconfig.toml  template.yaml
Harley/: usecase_entertainment_location_projections.ipynb
Playground/: README.md  (+8 more)
Playground/project_6a/: 01_crack_segmentation_benchmark.ipynb  02_sdnet2018_data_exploration.ipynb  03_yolo11_sdnet2018_still_image_classification.ipynb  README.md  pyproject.toml  readme_SDNET.md
(+16964 files in other folders)
